--- a/admin/member-manage.html
+++ b/admin/member-manage.html
@@ -210,11 +210,11 @@
             <div class="col-md-3 col-lg-2 sidebar">
                 <h5 class="mb-3">功能選單</h5>
                 <nav class="nav flex-column">
-                    <a class="nav-link active" href="#"><i class="bi bi-speedometer2"></i> 儀表板</a>
-                    <a class="nav-link" href="./productcategory-manage.html"><i class="bi bi-people"></i> 商品類別管理</a>
-                    <a class="nav-link" href="#"><i class="bi bi-box"></i> 商品管理</a>
-                    <a class="nav-link" href="#"><i class="bi bi-cart"></i> 訂單管理</a>
-                    <a class="nav-link" href="#"><i class="bi bi-gear"></i> 系統設定</a>
+                    <a class="nav-link active" href="./admin-index.html"><i class="bi bi-speedometer2"></i> 儀表板</a>
+                    <a class="nav-link" href="./productcategory-manage.html"><i class="bi bi-box"></i> 商品類別管理</a>
+                    <a class="nav-link" href="./product-manage.html"><i class="bi bi-cart"></i> 商品管理</a>
+                    <a class="nav-link" href="./member-manage.html"><i class="bi bi-people"></i> 會員管理</a>
+                    <a class="nav-link" href="./orders-manage.html"><i class="bi bi-clipboard-data"></i> 訂單管理</a>
                 </nav>
             </div>
             <!-- 右側主要功能區 -->
