--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <!-- Bootstrap Icons -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.0/font/bootstrap-icons.min.css"
         rel="stylesheet">
+
+    <link rel="stylesheet" href="./css/chat.css">
     <!-- 自定義CSS -->
     <style>
         /* 導航欄樣式 */
@@ -357,6 +359,7 @@
     <!-- Bootstrap JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
 
+    <script src="./js/chat.js"></script>
     <!-- JavaScript -->
     <script>
         let currentProducts = []; // 儲存當前所有商品
