Adjust the home page display and correct the forgotten password button (cannot click continuously)

--- a/forgot-password.html
+++ b/forgot-password.html
@@ -96,6 +96,41 @@
             display: none;
             margin-top: 1rem;
         }
+
+        /* 在原有的 style 標籤內新增 */
+        .btn-container {
+            text-align: center;
+            margin-top: 1rem;
+        }
+
+        .btn-primary {
+            background-color: #4b49ac;
+            border-color: #4b49ac;
+            width: 100%;
+            padding: 0.8rem;
+            position: relative;
+            transition: all 0.3s ease;
+        }
+
+        .btn-primary:disabled {
+            background-color: #dc3545;
+            border-color: #dc3545;
+            cursor: not-allowed;
+        }
+
+        .btn-primary:disabled .btn-text {
+            color: #fff;
+        }
+
+        .countdown-container {
+            text-align: center;
+            margin-top: 10px;
+        }
+
+        .countdown {
+            font-size: 14px;
+            color: #666;
+        }
     </style>
 </head>
 
@@ -158,9 +193,14 @@
                     <label for="email" class="form-label">電子郵件</label>
                     <input type="email" class="form-control" id="email" required>
                 </div>
-                <button type="submit" class="btn btn-primary">
-                    送出連結，請至原註冊信箱收信
-                </button>
+                <div class="btn-container">
+                    <button type="submit" class="btn btn-primary" id="submitBtn">
+                        <span class="btn-text">送出連結，請至原註冊信箱收信</span>
+                    </button>
+                </div>
+                <div class="countdown-container">
+                    <span class="countdown" id="countdown"></span>
+                </div>
             </form>
             <div class="alert alert-success" id="successAlert">
                 重置密碼連結已發送至您的信箱，請查收。
@@ -235,12 +275,47 @@
                         console.error('獲取購物車資訊錯誤:', error);
                     });
             }
+
+            function startCountdown(button, duration) {
+                // 禁用按鈕
+                button.prop('disabled', true);
+                // 修改按鈕文字
+                button.find('.btn-text').text('請稍候...');
+
+                // 初始化倒數計時
+                let timeLeft = duration;
+                const countdownSpan = $('#countdown');
+
+                // 顯示初始倒數時間
+                countdownSpan.text(`${timeLeft} 秒後可重新發送`);
+
+                // 設置定時器
+                const timer = setInterval(() => {
+                    timeLeft--;
+                    countdownSpan.text(`${timeLeft} 秒後可重新發送`);
+
+                    // 當倒數結束時
+                    if (timeLeft <= 0) {
+                        clearInterval(timer);
+                        button.prop('disabled', false);
+                        button.find('.btn-text').text('送出連結，請至原註冊信箱收信');
+                        countdownSpan.text('');
+                    }
+                }, 1000);
+            }
             // 新增忘記密碼相關的程式碼
             $('#forgotPasswordForm').on('submit', function (e) {
                 e.preventDefault();
 
+                const submitBtn = $('#submitBtn');
                 const account = $('#account').val();
                 const email = $('#email').val();
+
+                // 檢查表單欄位是否為空
+                if (!account || !email) {
+                    $('#errorAlert').text('請填寫所有欄位').fadeIn();
+                    return;
+                }
 
                 // 發送重置密碼請求
                 fetch('http://localhost:8080/api/members/forgot-password', {
@@ -260,6 +335,8 @@
                             $('#errorAlert').hide();
                             // 清空表單
                             $('#forgotPasswordForm')[0].reset();
+                            // 開始倒數計時
+                            startCountdown(submitBtn, 60);
                         } else {
                             $('#errorAlert').fadeIn();
                             $('#successAlert').hide();
