--- a/index.html
+++ b/index.html
@@ -101,68 +101,6 @@
             padding: 15px 10px;
         }
 
-        /* 商品卡片樣式 */
-        .product-card {
-            max-width: 200px;
-            margin-bottom: 20px;
-            transition: transform 0.3s;
-        }
-
-        .product-card:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        }
-
-        .product-image {
-            max-height: 260px;
-            /* 最大高度 */
-            max-width: 200px;
-            /* 最大寬度 */
-            width: 100%;
-            /* 寬度100%實現RWD */
-            height: auto;
-            /* 高度自動，保持比例 */
-            object-fit: contain;
-            /* 保持圖片比例 */
-            background-color: #fff;
-            /* 背景色 */
-            padding: 10px;
-            /* 內間距 */
-            margin: 0 auto;
-            /* 水平置中 */
-            display: block;
-            /* 區塊元素 */
-        }
-
-        .product-name {
-            font-size: 1.1rem;
-            font-weight: bold;
-            margin: 10px 0;
-            height: 2.4rem;
-            overflow: hidden;
-            display: -webkit-box;
-            -webkit-line-clamp: 2;
-            -webkit-box-orient: vertical;
-        }
-
-        .product-intro {
-            font-size: 0.9rem;
-            color: #666;
-            height: 3rem;
-            overflow: hidden;
-            display: -webkit-box;
-            -webkit-line-clamp: 2;
-            -webkit-box-orient: vertical;
-            margin-bottom: 1rem;
-        }
-
-        .product-price {
-            font-size: 1.2rem;
-            color: #ff5722;
-            font-weight: bold;
-            margin: 10px 0;
-        }
-
         /* 價格氣泡樣式 */
         .price-bubble {
             position: absolute;
@@ -214,6 +152,124 @@
             height: 3rem;
         }
 
+        /* 下拉選單樣式 */
+        .dropdown-menu {
+            background-color: white;
+            border: 1px solid rgba(0, 0, 0, .15);
+            min-width: 120px;
+        }
+
+        .dropdown-item {
+            color: #212529;
+            padding: 8px 20px;
+        }
+
+        .dropdown-item:hover {
+            background-color: #f8f9fa;
+        }
+
+        /* 主要容器樣式 */
+        .container-fluid {
+            padding-left: 0;
+            padding-right: 0;
+        }
+
+        /* 商品列表樣式 */
+        #productList {
+            display: grid;
+            grid-template-columns: repeat(auto-fill, 200px);
+            gap: 0;
+            padding: 0;
+            width: 100%;
+            margin: 0 auto;
+            justify-content: center;
+        }
+
+        /* 商品卡片樣式 */
+        .product-card {
+            width: 200px;
+            height: 100%;
+            margin: 0;
+            padding: 0;
+            border: 1px solid #dee2e6;
+            border-right: 1px solid #dee2e6;
+            border-bottom: 1px solid #dee2e6;
+            border-radius: 0;
+            background-color: #fff;
+        }
+
+        .card-body {
+            padding: 1rem;
+            display: flex;
+            flex-direction: column;
+            flex-grow: 1;
+        }
+
+        /* 商品圖片樣式 */
+        .product-image-container {
+            width: 100%;
+            height: 200px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            background-color: #fff;
+            overflow: hidden;
+        }
+
+        .product-image {
+            width: 100%;
+            height: 200px;
+            object-fit: contain;
+            padding: 0.5rem;
+        }
+
+        /* 商品文字內容樣式 */
+        .product-name {
+            font-size: 1rem;
+            font-weight: bold;
+            margin: 0.5rem 0;
+            height: 2.4rem;
+            overflow: hidden;
+            display: -webkit-box;
+            -webkit-line-clamp: 2;
+            -webkit-box-orient: vertical;
+        }
+
+        .product-intro {
+            font-size: 0.9rem;
+            color: #666;
+            margin-bottom: 1rem;
+            overflow: hidden;
+            display: -webkit-box;
+            -webkit-line-clamp: 2;
+            -webkit-box-orient: vertical;
+            text-overflow: ellipsis;
+            cursor: help;
+            position: relative;
+        }
+
+        .product-price {
+            font-size: 1.1rem;
+            color: #ff5722;
+            font-weight: bold;
+            margin: 0.5rem 0;
+        }
+
+        /* 提示框樣式 */
+        .tooltip-custom {
+            position: absolute;
+            background: rgba(0, 0, 0, 0.8);
+            color: white;
+            padding: 8px 12px;
+            border-radius: 4px;
+            font-size: 0.9rem;
+            max-width: 300px;
+            z-index: 1000;
+            visibility: hidden;
+            opacity: 0;
+            transition: opacity 0.3s;
+        }
+
         /* RWD 響應式設計 */
         @media (max-width: 768px) {
             .search-input {
@@ -231,26 +287,6 @@
                 border-bottom: 1px solid #dee2e6;
                 margin-bottom: 20px;
             }
-
-            .product-card {
-                margin-bottom: 15px;
-            }
-        }
-
-        /* 下拉選單樣式 */
-        .dropdown-menu {
-            background-color: white;
-            border: 1px solid rgba(0, 0, 0, .15);
-            min-width: 120px;
-        }
-
-        .dropdown-item {
-            color: #212529;
-            padding: 8px 20px;
-        }
-
-        .dropdown-item:hover {
-            background-color: #f8f9fa;
         }
     </style>
 </head>
@@ -382,6 +418,11 @@
 
             // 初始載入所有商品和分類
             initializeApp();
+
+            // 清理殘留的提示框
+            $(window).on('scroll resize', function () {
+                $('.tooltip-custom').remove();
+            });
 
             // 檢查登入狀態
             function checkLoginStatus() {
@@ -564,27 +605,59 @@
                 // 生成商品卡片
                 filteredProducts.forEach(product => {
                     const card = `
-                        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
-                            <div class="card product-card h-100">
-                                <img src="http://localhost:8080/api/products/${product.product_no}/image" 
-                                     class="product-image" 
-                                     alt="${product.product_name}"
-                                     onerror="this.src='images/default-book.jpg'">
-                                <div class="card-body d-flex flex-column">
-                                    <h5 class="product-name">${product.product_name}</h5>
-                                    <p class="product-intro">${product.product_introduce || '暫無商品介紹'}</p>
-                                    <div class="mt-auto">
-                                        <p class="product-price">NT$ ${product.product_price.toLocaleString()}</p>
-                                        <button class="btn btn-primary w-100" 
-                                                data-product-id="${product.product_no}">
-                                            <i class="bi bi-cart-plus"></i> Add to Cart
-                                        </button>
-                                    </div>
+                        <div class="card product-card">
+                            <img src="http://localhost:8080/api/products/${product.product_no}/image" 
+                                class="product-image" 
+                                alt="${product.product_name}"
+                                onerror="this.src='images/default-book.jpg'">
+                            <div class="card-body d-flex flex-column">
+                                <h5 class="product-name">${product.product_name}</h5>
+                                <p class="product-intro mb-auto" data-full-text="${product.product_introduce || '暫無商品介紹'}">${product.product_introduce || '暫無商品介紹'}</p>
+                                <div class="mt-auto">
+                                    <p class="product-price mb-2">NT$ ${product.product_price.toLocaleString()}</p>
+                                    <button class="btn btn-primary w-100" 
+                                        data-product-id="${product.product_no}">
+                                        <i class="bi bi-cart-plus"></i> Add to Cart
+                                    </button>
                                 </div>
                             </div>
                         </div>
                     `;
                     productList.append(card);
+                });
+                initializeTooltips();
+            }
+
+            // 新增初始化提示框功能
+            function initializeTooltips() {
+                let tooltip = null;
+
+                $(document).on('mouseenter', '.product-intro', function (e) {
+                    const fullText = $(this).data('full-text');
+
+                    // 創建提示框
+                    tooltip = $('<div class="tooltip-custom"></div>')
+                        .text(fullText)
+                        .appendTo('body');
+
+                    // 計算位置
+                    const rect = this.getBoundingClientRect();
+                    const scrollTop = window.pageYOffset || document.documentElement.scrollTop;
+                    const scrollLeft = window.pageXOffset || document.documentElement.scrollLeft;
+
+                    tooltip.css({
+                        top: rect.top + scrollTop - tooltip.outerHeight() - 10,
+                        left: rect.left + scrollLeft,
+                        visibility: 'visible',
+                        opacity: 1
+                    });
+                });
+
+                $(document).on('mouseleave', '.product-intro', function () {
+                    if (tooltip) {
+                        tooltip.remove();
+                        tooltip = null;
+                    }
                 });
             }
 
